--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,16 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-
-    <title>My Electron app</title>
+    <style type="text/css">
+      body {
+        font-family: Verdana, Geneva, sans-serif;
+        margin: 0;
+        overflow: hidden;
+      }
+    </style>
+    <title>HN Reader</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
   </body>
 </html>
